--- a/main.kv
+++ b/main.kv
@@ -1,3 +1,7 @@
-MinhasContas:
-    id: minhascontas
-    name: minhascontas
+#:include kv/contamensal.kv
+
+ScreenManager:
+    id: screen_manager
+    ContaMensal:
+        name: "contalmensal"
+        id: contamensal
